--- a/app/src/main/res/layout/stats_fragment.xml
+++ b/app/src/main/res/layout/stats_fragment.xml
@@ -36,7 +36,6 @@
                 android:text=""
                 android:textSize="16sp" />
         </LinearLayout>
-
         <LinearLayout
             android:id="@+id/List_3"
             android:layout_width="wrap_content"
@@ -60,7 +59,6 @@
                 android:text=""
                 android:textSize="16sp" />
         </LinearLayout>
-
         <LinearLayout
             android:id="@+id/List_4"
             android:layout_width="wrap_content"
@@ -84,7 +82,6 @@
                 android:textSize="16sp" />
 
         </LinearLayout>
-
         <LinearLayout
             android:id="@+id/List_5"
             android:layout_width="wrap_content"
@@ -107,7 +104,6 @@
                 android:text=""
                 android:textSize="16sp" />
         </LinearLayout>
-
         <LinearLayout
             android:id="@+id/List_6"
             android:layout_width="wrap_content"
@@ -130,7 +126,6 @@
                 android:text=""
                 android:textSize="16sp" />
         </LinearLayout>
-
         <LinearLayout
             android:id="@+id/List_7"
             android:layout_width="wrap_content"
@@ -153,7 +148,6 @@
                 android:text=""
                 android:textSize="16sp" />
         </LinearLayout>
-
         <LinearLayout
             android:id="@+id/List_8"
             android:layout_width="wrap_content"
@@ -176,7 +170,6 @@
                 android:text=""
                 android:textSize="16sp" />
         </LinearLayout>
-
         <LinearLayout
             android:id="@+id/List_9"
             android:layout_width="wrap_content"
@@ -199,7 +192,6 @@
                 android:text=""
                 android:textSize="16sp" />
         </LinearLayout>
-
         <LinearLayout
             android:id="@+id/List_10"
             android:layout_width="wrap_content"
@@ -226,13 +218,12 @@
 
 
 
-<EditText
-    android:text="последовательность собранных слов
-и все это сохранять в ткт и читать потом при загрузке"
-    android:layout_width="200dp"
-    android:layout_height="250dp"
-    android:layout_alignParentEnd="true"
-    />
+    <EditText
+        android:text="последовательность собранных слов
+        и все это сохранять в ткт и читать потом при загрузке"
+        android:layout_width="200dp"
+        android:layout_height="250dp"
+        android:layout_alignParentEnd="true"/>
 
 
     <ListView
