--- a/app/src/main/res/layout/game_start.xml
+++ b/app/src/main/res/layout/game_start.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginTop="2dp"
-            android:text="Очков смены слов:"
+            android:text="Смена слов:"
             android:textColor="#000000"
             android:textSize="12sp" />
         <TextView
@@ -33,8 +33,8 @@
             android:layout_marginStart="15dp"
             android:text="Очки"
             android:textColor="#000000"
-            android:textSize="12sp"
-             />
+            android:textSize="12sp" />
+
         <TextView
             android:id="@+id/textLvl"
             android:layout_width="wrap_content"
@@ -74,27 +74,52 @@
         android:layout_toEndOf="@id/score"
         android:textColor="#000000"
         android:textSize="12sp" />
-        <Button
-            android:id="@+id/faq"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="5dp"
-            android:background="@drawable/faquest"
-            android:onClick="onClick" />
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            style="@android:style/Widget.ProgressBar.Horizontal"
-            android:layout_width="350dp"
-            android:layout_height="10dp"
-            android:layout_marginTop="3dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_centerInParent="true"
-            android:layout_below="@id/score" />
+        <TextView
+            android:id="@+id/timerClock"
+            android:layout_width="60dp"
+            android:layout_height="20dp"
+            android:layout_toEndOf="@id/lvlview"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="2dp"
+            android:text="Таймер"
+            android:textColor="#000000"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/clock"
+            android:layout_width="60dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="5dp"
+            android:layout_below="@id/textLvl"
+            android:layout_marginStart="10dp"
+            android:layout_toEndOf="@id/lvlview"
+            android:textColor="#000000"
+            android:textSize="12sp" />
+
+
+                <Button
+                    android:id="@+id/faq"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_toEndOf="@id/clock"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="5dp"
+                    android:background="@drawable/faquest"
+                    android:onClick="onClick" />
+
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    style="@android:style/Widget.ProgressBar.Horizontal"
+                    android:layout_width="350dp"
+                    android:layout_height="10dp"
+                    android:layout_marginTop="3dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_centerInParent="true"
+                    android:layout_below="@id/score" />
 
 
 
@@ -332,8 +357,8 @@
 
         <TextView
             android:id="@+id/char_1"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:textAlignment="center"
             android:gravity="center"
             android:textSize="13sp"
@@ -343,12 +368,12 @@
         <TextView
             android:id="@+id/char_2"
             android:layout_toEndOf="@id/char_1"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:textAlignment="center"
             android:gravity="center"
             android:textSize="13sp"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="2dp"
             android:layout_marginTop="5dp"
             android:textColor="@color/black"
             android:background="@drawable/scroll"
@@ -356,12 +381,12 @@
         <TextView
             android:id="@+id/char_3"
             android:layout_toEndOf="@id/char_2"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:textAlignment="center"
             android:gravity="center"
             android:textSize="13sp"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="2dp"
             android:layout_marginTop="5dp"
             android:textColor="@color/black"
             android:background="@drawable/scroll"
@@ -369,12 +394,12 @@
         <TextView
             android:id="@+id/char_4"
             android:layout_toEndOf="@id/char_3"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:textAlignment="center"
             android:gravity="center"
             android:textSize="13sp"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="2dp"
             android:layout_marginTop="5dp"
             android:textColor="@color/black"
             android:background="@drawable/scroll"
@@ -382,12 +407,12 @@
         <TextView
             android:id="@+id/char_5"
             android:layout_toEndOf="@id/char_4"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:textAlignment="center"
             android:gravity="center"
             android:textSize="13sp"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="2dp"
             android:layout_marginTop="5dp"
             android:textColor="@color/black"
             android:background="@drawable/scroll"
@@ -395,12 +420,12 @@
         <TextView
             android:id="@+id/char_6"
             android:layout_toEndOf="@id/char_5"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:textAlignment="center"
             android:gravity="center"
             android:textSize="13sp"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="2dp"
             android:layout_marginTop="5dp"
             android:textColor="@color/black"
             android:background="@drawable/scroll"
@@ -408,12 +433,12 @@
         <TextView
             android:id="@+id/char_7"
             android:layout_toEndOf="@id/char_6"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:textAlignment="center"
             android:gravity="center"
             android:textSize="13sp"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="2dp"
             android:layout_marginTop="5dp"
             android:textColor="@color/black"
             android:background="@drawable/scroll"
@@ -421,12 +446,12 @@
         <TextView
             android:id="@+id/char_8"
             android:layout_toEndOf="@id/char_7"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:textAlignment="center"
             android:gravity="center"
             android:textSize="13sp"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="2dp"
             android:layout_marginTop="5dp"
             android:textColor="@color/black"
             android:background="@drawable/scroll"
@@ -434,12 +459,12 @@
         <TextView
             android:id="@+id/char_9"
             android:layout_toEndOf="@id/char_8"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:textAlignment="center"
             android:gravity="center"
             android:textSize="13sp"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="2dp"
             android:layout_marginTop="5dp"
             android:textColor="@color/black"
             android:background="@drawable/scroll"
@@ -447,12 +472,12 @@
         <TextView
             android:id="@+id/char_10"
             android:layout_toEndOf="@id/char_9"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:textAlignment="center"
             android:gravity="center"
             android:textSize="13sp"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="2dp"
             android:layout_marginTop="5dp"
             android:textColor="@color/black"
             android:background="@drawable/scroll"
@@ -460,12 +485,12 @@
         <TextView
             android:id="@+id/char_11"
             android:layout_toEndOf="@id/char_10"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:textAlignment="center"
             android:gravity="center"
             android:textSize="13sp"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="2dp"
             android:layout_marginTop="5dp"
             android:textColor="@color/black"
             android:background="@drawable/scroll"
@@ -473,12 +498,12 @@
         <TextView
             android:id="@+id/char_12"
             android:layout_toEndOf="@id/char_11"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:textAlignment="center"
             android:gravity="center"
             android:textSize="13sp"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="2dp"
             android:layout_marginTop="5dp"
             android:textColor="@color/black"
             android:background="@drawable/scroll"
@@ -486,12 +511,12 @@
         <TextView
             android:id="@+id/char_13"
             android:layout_toEndOf="@id/char_12"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:textAlignment="center"
             android:gravity="center"
             android:textSize="13sp"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="2dp"
             android:layout_marginTop="5dp"
             android:textColor="@color/black"
             android:background="@drawable/scroll"
@@ -499,12 +524,12 @@
         <TextView
             android:id="@+id/char_14"
             android:layout_toEndOf="@id/char_13"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:textAlignment="center"
             android:gravity="center"
             android:textSize="13sp"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="2dp"
             android:layout_marginEnd="5dp"
             android:layout_marginTop="5dp"
             android:textColor="@color/black"
