--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,9 @@
 
     <color name="black">#000000</color>
 
+    <color name="back_1">#A2FA97</color>
+    <color name="back_2">#5BEDCC</color>
+    <color name="back_3">#EFA561</color>
+
 
 </resources>
