--- a/app/src/main/res/layout/task_fragment.xml
+++ b/app/src/main/res/layout/task_fragment.xml
@@ -1,4 +1,5 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -68,6 +69,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
         app:layout_constraintVertical_bias="0.068">
+
+
+        <TextView
+            android:id="@+id/thisWordShow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.033"
+            android:background="@color/colorSpeed"/>
 
         <ListView
             android:id="@+id/Thru_answer_1"
@@ -145,51 +159,7 @@
             app:layout_constraintVertical_bias="0.0"
             tools:layout_conversion_absoluteHeight="380dp"
             tools:layout_conversion_absoluteWidth="155dp"/>
-        <ListView
-            android:id="@+id/Wrong_answer_2"
-            android:layout_width="120dp"
-            android:layout_height="300dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="10dp"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.975"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-            tools:layout_conversion_absoluteHeight="380dp"
-            tools:layout_conversion_absoluteWidth="155dp"/>
-        <ListView
-            android:id="@+id/Wrong_answer_3"
-            android:layout_width="120dp"
-            android:layout_height="300dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="10dp"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.975"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-            tools:layout_conversion_absoluteHeight="380dp"
-            tools:layout_conversion_absoluteWidth="155dp"/>
-        <ListView
-            android:id="@+id/Wrong_answer_4"
-            android:layout_width="120dp"
-            android:layout_height="300dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="10dp"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.975"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-            tools:layout_conversion_absoluteHeight="380dp"
-            tools:layout_conversion_absoluteWidth="155dp"/>
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
