--- a/app/src/main/res/layout/game_start.xml
+++ b/app/src/main/res/layout/game_start.xml
@@ -127,15 +127,16 @@
 
     <RelativeLayout
         android:id="@+id/Colo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:background="@drawable/desk_fore"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="0dp"
-        android:layout_below="@+id/topLayout">
+        android:layout_below="@+id/topLayout"
+        android:layout_above="@+id/chars_layout">
 
 
 
@@ -346,195 +347,208 @@
     <RelativeLayout
         android:id="@+id/chars_layout"
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_height="49dp"
+        android:layout_above="@id/engine_buttons"
+
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
-        android:layout_marginBottom="5dp"
-        android:layout_centerInParent="true"
-        android:layout_above="@id/engine_buttons"
-        android:layout_below="@+id/Colo">
+        android:layout_marginBottom="1dp">
 
 
         <TextView
             android:id="@+id/char_1"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:textSize="13sp"
             android:layout_centerVertical="true"
+            android:background="@drawable/scroll"
+            android:gravity="center"
+            android:textAlignment="center"
             android:textColor="@color/black"
-            android:background="@drawable/scroll" />
+            android:textSize="13sp" />
+
         <TextView
             android:id="@+id/char_2"
-            android:layout_toEndOf="@id/char_1"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:textSize="13sp"
+            android:layout_centerVertical="true"
             android:layout_marginStart="2dp"
             android:layout_marginTop="5dp"
-            android:textColor="@color/black"
+            android:layout_toEndOf="@id/char_1"
             android:background="@drawable/scroll"
-            android:layout_centerVertical="true"/>
+            android:gravity="center"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="13sp" />
+
         <TextView
             android:id="@+id/char_3"
-            android:layout_toEndOf="@id/char_2"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:textSize="13sp"
+            android:layout_centerVertical="true"
             android:layout_marginStart="2dp"
             android:layout_marginTop="5dp"
-            android:textColor="@color/black"
+            android:layout_toEndOf="@id/char_2"
             android:background="@drawable/scroll"
-            android:layout_centerVertical="true"/>
+            android:gravity="center"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="13sp" />
+
         <TextView
             android:id="@+id/char_4"
-            android:layout_toEndOf="@id/char_3"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:textSize="13sp"
+            android:layout_centerVertical="true"
             android:layout_marginStart="2dp"
             android:layout_marginTop="5dp"
-            android:textColor="@color/black"
+            android:layout_toEndOf="@id/char_3"
             android:background="@drawable/scroll"
-            android:layout_centerVertical="true"/>
+            android:gravity="center"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="13sp" />
+
         <TextView
             android:id="@+id/char_5"
-            android:layout_toEndOf="@id/char_4"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:textSize="13sp"
+            android:layout_centerVertical="true"
             android:layout_marginStart="2dp"
             android:layout_marginTop="5dp"
-            android:textColor="@color/black"
+            android:layout_toEndOf="@id/char_4"
             android:background="@drawable/scroll"
-            android:layout_centerVertical="true"/>
+            android:gravity="center"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="13sp" />
+
         <TextView
             android:id="@+id/char_6"
-            android:layout_toEndOf="@id/char_5"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:textSize="13sp"
+            android:layout_centerVertical="true"
             android:layout_marginStart="2dp"
             android:layout_marginTop="5dp"
-            android:textColor="@color/black"
+            android:layout_toEndOf="@id/char_5"
             android:background="@drawable/scroll"
-            android:layout_centerVertical="true"/>
+            android:gravity="center"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="13sp" />
+
         <TextView
             android:id="@+id/char_7"
-            android:layout_toEndOf="@id/char_6"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:textSize="13sp"
+            android:layout_centerVertical="true"
             android:layout_marginStart="2dp"
             android:layout_marginTop="5dp"
-            android:textColor="@color/black"
+            android:layout_toEndOf="@id/char_6"
             android:background="@drawable/scroll"
-            android:layout_centerVertical="true"/>
+            android:gravity="center"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="13sp" />
+
         <TextView
             android:id="@+id/char_8"
-            android:layout_toEndOf="@id/char_7"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:textSize="13sp"
+            android:layout_centerVertical="true"
             android:layout_marginStart="2dp"
             android:layout_marginTop="5dp"
-            android:textColor="@color/black"
+            android:layout_toEndOf="@id/char_7"
             android:background="@drawable/scroll"
-            android:layout_centerVertical="true"/>
+            android:gravity="center"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="13sp" />
+
         <TextView
             android:id="@+id/char_9"
-            android:layout_toEndOf="@id/char_8"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:textSize="13sp"
+            android:layout_centerVertical="true"
             android:layout_marginStart="2dp"
             android:layout_marginTop="5dp"
-            android:textColor="@color/black"
+            android:layout_toEndOf="@id/char_8"
             android:background="@drawable/scroll"
-            android:layout_centerVertical="true"/>
+            android:gravity="center"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="13sp" />
+
         <TextView
             android:id="@+id/char_10"
-            android:layout_toEndOf="@id/char_9"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:textSize="13sp"
+            android:layout_centerVertical="true"
             android:layout_marginStart="2dp"
             android:layout_marginTop="5dp"
-            android:textColor="@color/black"
+            android:layout_toEndOf="@id/char_9"
             android:background="@drawable/scroll"
-            android:layout_centerVertical="true"/>
+            android:gravity="center"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="13sp" />
+
         <TextView
             android:id="@+id/char_11"
-            android:layout_toEndOf="@id/char_10"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:textSize="13sp"
+            android:layout_centerVertical="true"
             android:layout_marginStart="2dp"
             android:layout_marginTop="5dp"
-            android:textColor="@color/black"
+            android:layout_toEndOf="@id/char_10"
             android:background="@drawable/scroll"
-            android:layout_centerVertical="true"/>
+            android:gravity="center"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="13sp" />
+
         <TextView
             android:id="@+id/char_12"
-            android:layout_toEndOf="@id/char_11"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:textSize="13sp"
+            android:layout_centerVertical="true"
             android:layout_marginStart="2dp"
             android:layout_marginTop="5dp"
-            android:textColor="@color/black"
+            android:layout_toEndOf="@id/char_11"
             android:background="@drawable/scroll"
-            android:layout_centerVertical="true"/>
+            android:gravity="center"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="13sp" />
+
         <TextView
             android:id="@+id/char_13"
-            android:layout_toEndOf="@id/char_12"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:textSize="13sp"
+            android:layout_centerVertical="true"
             android:layout_marginStart="2dp"
             android:layout_marginTop="5dp"
-            android:textColor="@color/black"
+            android:layout_toEndOf="@id/char_12"
             android:background="@drawable/scroll"
-            android:layout_centerVertical="true"/>
+            android:gravity="center"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="13sp" />
+
         <TextView
             android:id="@+id/char_14"
-            android:layout_toEndOf="@id/char_13"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:textSize="13sp"
+            android:layout_centerVertical="true"
             android:layout_marginStart="2dp"
-            android:layout_marginEnd="5dp"
             android:layout_marginTop="5dp"
-            android:textColor="@color/black"
+            android:layout_marginEnd="5dp"
+            android:layout_toEndOf="@id/char_13"
             android:background="@drawable/scroll"
-            android:layout_centerVertical="true"/>
+            android:gravity="center"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="13sp" />
 
     </RelativeLayout>
 
@@ -544,7 +558,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="3dp">
+        android:layout_marginBottom="3dp"
+        >
 
     <Button
         android:id="@+id/button2"
@@ -558,7 +573,7 @@
 
         <Button
             android:id="@+id/ChekOut"
-            android:layout_width="140dp"
+            android:layout_width="180dp"
             android:layout_height="50dp"
             android:layout_marginStart="0dp"
             android:layout_marginEnd="15dp"
